--- a/public/login.html
+++ b/public/login.html
@@ -28,7 +28,7 @@
       .then(res => res.json())
       .then(data => {
         if (data.success) {
-          window.location.href = '/dashboard.html';
+          window.location.href = '/index.html';
         } else {
           document.getElementById('loginStatus').textContent = data.message;
         }
